--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-lazyload": "^3.2.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.5.3",
