--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@mui/styled-engine-sc": "^6.1.6",
     "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -25,6 +31,7 @@
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.26.2",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "5.0.0-rc.2"
