--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@mui/material": "^6.1.6",
     "@mui/styled-engine-sc": "^6.1.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-query": "^5.60.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "flat-color-icons": "^1.1.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.451.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
